--- a/Mobile/index.html
+++ b/Mobile/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Meu Primeiro Js</h1>
-<p>SEILA</p>
+<p>Kauani</p>
 <p id="demo"></p>
 <script>
 document.getElementById("demo").innerHTML=5+6;
@@ -18,8 +18,8 @@ document.getElementById("demo").innerHTML=5+6;
 document.write(5+6);
 </script>
 
-<h2>JS</h2>
-<p>JS</p>
+<h2>Meu Primeiro JavaScripts</h2>
+<p>Kauani</p>
 <button type="button" onclick="document.write(5+6)">
 Try it</button><br><br>
 
